--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -101,26 +101,26 @@ approach to calibrating gyrochronology}
 
 % Still to do: deredden before calculating ages.
 
-% Word limit: 3500
+% Word limit: 3500, currently 3183
 
-% Word limit: 250, currently 230
+% Word limit: 250, currently 189
 \begin{abstract}
     \include{abstract}
 \end{abstract}
 
-% Word limit: 750, currently: 674.
+% Word limit: 750, currently: 1213
 \include{intro}
 
-% Word limit: 500, currently 336.
+% Word limit: 500, currently 340
 \include{method}
 
-% Word limit: 500, currently 1609
+% Word limit: 500, currently 1178
 \include{results}
 
 % % Word limit: 500
 % \include{discussion}
 
-% Word limit: 250
+% Word limit: 250, currently 263
 \include{conclusion}
 
 \include{acknowledgements}
