--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -11,17 +11,17 @@ the traditional age-dating method of isochrone placement.
 It is also well established that stars of the same age but different {\it
 masses} have different rotation periods \racomment{(citation)}, thought to be
 caused by the deeper convective zones, and therefore stronger magnetic dynamos
-(and more efficient magnetic braking) in lower-mass stars
-\footnote{Color is the directly observable quantity to which empirical
-gyrochronology relation are usually calibrated to, rather than mass or
-effective temperature.}.
-However, an underlying assumption behind many of the empirical gyrochronology
+(and more efficient magnetic braking) in lower-mass stars.
+However, an underlying assumption behind many empirical gyrochronology
 relations \citep[\eg][]{barnes2003, barnes2007, mamajek2008, meibom2011,
 angus2015, angus2019} is that the relationships between rotation period and
-color, and rotation period and age are {\it separable}.
+photometric color\footnote{As the directly observable quantity, color is
+usually used as a mass-proxy, and empirical gyrochronology relations are
+usually calibrated in color, rather than mass or effective temperature.
+}, and rotation period and age are {\it separable}.
 In other words, the period-color relation is the same at all ages and the
 period-age relation is the same at all colors.
-It was recently shown that old stars rotate more rapidly than a simple,
+It was recently shown that old field stars rotate more rapidly than a simple,
 separable gyrochronology relation would predict \citep{angus2015,
 vansaders2016, vansaders2018, metcalfe2019}, and that a mass-dependent
 modification to the classical \citet{skumanich1972} spin-down law is required
@@ -38,9 +38,8 @@ young -- currently the oldest is 2.5 Gyr (NGC 6819).
 Without rotation periods for precisely dated old stars, it is extremely
 difficult to calibrate the relationship between rotation period and color at
 old ages.
-For this reason, we turned to a population-based stellar age indicator,
-velocity dispersion, to investigate the period-temperature relations at old
-ages.
+For this reason, we used a population-based stellar age indicator, velocity
+dispersion, to investigate the period-color relations at old ages.
 % Since a separable period-age and period-color relation provided an adequate
 % fit for the young stars, it was naturally assumed to apply to old stars too.
 
@@ -52,7 +51,7 @@ $v_z$).
 Young stars have relatively small vertical velocities, but gain momentum in
 the vertical direction over time.
 Although the cause of orbital heating is not well understood, interactions
-with giant molecular clouds are thought to play an important
+with giant molecular clouds and spiral arms are thought to play an important
 role \racomment{(citations)}.
 Although the velocity of any individual star will only provide a weak age
 constraint, the velocity dispersion of a group of stars can indicate whether,
@@ -92,18 +91,24 @@ The \kepler\ field is positioned at low galactic latitude (b=5-20\degrees), so
 In this paper, we tested the \citet{angus2019} gyrochronology relation, which
 was calibrated using the period-color relation of Praesepe (in \gaia\ \gcolor\
 color) and the period-age relation of Praesepe and the Sun.
+The large number of Praesepe members with precise rotation periods from the
+\ktwo\ mission \citep{douglas2017, rebull2017}, spanning spectral types F
+through early M, makes it the ideal cluster for calibrating the period-color
+relation of stars at 650 Myrs.
 % This relation was calibrated by fitting a 5th-order polynomial to the relation
 % between (log) rotation period and (log) \gaia\ \gcolor\ color for around 800
 % members of the Praesepe cluster, and a straight line in (log) age to Praesepe
 % and the Sun.
-Although only calibrated using Praesepe and the Sun, this gyrochronology
-relation was tested on NGC 6819, a 2.5 Gyr cluster, for which it predicted
-accurate ages.
-In addition, the period-color relation of Praesepe is nearly identical to the
-period-color relation of the Hyades, a cluster of around the same age: $\sim$
-650 years \citep{douglas2016, douglas2017, rebull2017}.
-However, this relation does {\it not} provide a good fit to NGC 6811, a 1.1
-Gyr cluster \citep{curtis2019}.
+Although only calibrated using Praesepe ($\sim$ 650 Myr) and the Sun (4.56
+Gyr), the \citet{angus2019} gyrochronology relation predicts accurate ages for
+members of NGC 6819, a 2.5 Gyr open cluster.
+However there are no rotation periods for K or M dwarfs in this cluster -- its
+coolest members with rotation periods are G dwarfs.
+The period-color relation of Praesepe is nearly identical to the period-color
+relation of the Hyades, a cluster of around the same age: $\sim$ 650 years
+\citep{douglas2016, douglas2017, rebull2017}.
+However, Praesepe and the Hyades do {\it not} have the same period-color
+relation as NGC 6811, a 1.1 Gyr cluster \citep{curtis2019}.
 The G dwarfs in NGC 6811 rotate at the same rate as the K dwarfs and it
 appears as though the K stars have `stalled' -- their spin-down has been
 halted.
@@ -111,13 +116,13 @@ The \citet{angus2019} gyrochronology relation assumes that the rotation
 period-color relation of Praesepe is applicable to stars of all ages: the same
 polynomial relation fit to Praesepe is used to describe the period-color
 relation for all stars.
-However, the NGC 6811 cluster suggests that this assumption does not hold past
-around 1 Gyr.
+However, the NGC 6811 cluster suggests that this assumption does not hold for
+K dwarfs past around 1 Gyr.
 If the period-color relation of the \citet{angus2019} gyrochronology model
 {\it were} a perfect model for the rotational evolution of stars, then groups
 of stars selected to be similar ages using this relation should fall on an
-isochrone on a CMD, an isochrone in period-color space, and an
-isochrone in velocity dispersion-color space.
+isochrone on a CMD.
+% and have the same velocity dispersion across all colors.
 Unfortunately, uncertainties on \gaia\ photometry and parallaxes, plus
 variations in metallicity and extinction, blur out the main sequence enough
 that differences between stars in different age and rotation bins are not
@@ -131,10 +136,13 @@ position, it can be very sensitive to {\it differences} in the ages of stellar
 populations.
 
 Isochrones and stellar evolution tracks are highly dependent on choices made
-about input physics and assumptions and have often been calibrated using
-different types of stars.
+about input physics and assumptions.
+% and have often been calibrated using
+% different types of stars.
 As a result, different sets of models can have very different shapes on the
 CMD, particularly at low masses.
+In fact, only empirical models, not physical ones, are currently able to
+reproduce the CMD positions of M dwarfs.
 Instead of relying on CMD position to age-date groups of stars, we opted to
 explore age trends via kinematics.
 Kinematic age-dating has the advantage of being relatively model independent,
@@ -142,9 +150,9 @@ or at least, having a very simple model: that velocity dispersion increases
 over time.
 This means that it is relatively easy to rank groups of stars by age: older
 groups have a larger velocity dispersion.
-It is less easy to rank-order groups of stars by age on the CMD because
-stellar evolution is highly mass and metallicity dependent, and because
-different stellar evolution models predict different ages for the same CMD
-position.
-This does not mean that it is not possible to calibrate gyrochronology using
-isochrones, however it is not the focus of this study.
+% It is less easy to rank-order groups of stars by age on the CMD because
+% stellar evolution is highly mass and metallicity dependent, and because
+% different stellar evolution models predict different ages for the same CMD
+% position.
+% This does not mean that it is not possible to calibrate gyrochronology using
+% isochrones, however it is not the focus of this study.
