--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -84,6 +84,7 @@ approach to calibrating gyrochronology}
     Adrian Price-Whelan,
     Jennifer van Saders,
     Elisabeth Newton,
+    Jason Curtis,
     Travis Berger,
     Dan Foreman-Mackey,
     Lauren Anderson,
