adding velocity dispersion as color

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -79,19 +79,19 @@
 approach to calibrating gyrochronology}
 
 \author{%
-    Ruth Angus,
-    Angus Beane,
-    Adrian Price-Whelan,
-    Jennifer van Saders,
-    Elisabeth Newton,
-    Jason Curtis,
-    Travis Berger,
-    Dan Foreman-Mackey,
-    Lauren Anderson,
-    Megan Bedell,
-    Jackie Faherty,
-    Rocio Kiman,
-    Melissa Ness}
+    Ruth Angus \etal}
+    % Angus Beane,
+    % Adrian Price-Whelan,
+    % Jennifer van Saders,
+    % Elisabeth Newton,
+    % Jason Curtis,
+    % Travis Berger,
+    % Dan Foreman-Mackey,
+    % Lauren Anderson,
+    % Megan Bedell,
+    % Jackie Faherty,
+    % Rocio Kiman,
+    % Melissa Ness}
 
 % \altaffiltext{\amnh}{American Museum of Natural History, Central Park West,
 % Manhattan, NY, USA}
