--- a/paper/results.tex
+++ b/paper/results.tex
@@ -271,6 +271,31 @@ This would be a paradigm shift for gyrochronology, stellar spin-down rate is
 thought to be directly tied to magnetic field strength.
 The deeper convection zones of later type stars generate stronger magnetic
 fields which {\it should} lead to more efficient angular momentum loss.
+
+\begin{figure}
+  \caption{
+The rotation periods vs effective temperatures of stars in the \mct\ sample,
+    colored by the velocity dispersions of stars in restricted period and
+    temperature ranges.
+}
+  \centering
+    \includegraphics[width=1\textwidth]{dispersion_period_teff}
+\label{fig:dispersion_period_teff}
+\end{figure}
+
+Figure \ref{fig:dispersion_period_teff} shows the stars in our sample on a
+plot of period vs effective temperature, coloured by their (\vb) velocity
+dispersion, where velocity dispersion was calculated in period and temperature
+bins (made apparent by the visible grid-like structure).
+If we assume that mass dependent heating does {\it not} affect this sample,
+velocity dispersion can be interpreted as an age proxy and stars bins of
+similar colour in figure \ref{fig:dispersion_period_teff} are similar ages.
+Interpreted this way, it appears as though isochrones slope downwards in
+period-temperature space at old ages.
+This figure also suggests that the oldest stars with measured rotation periods
+are cool, which may be because cooler stars remain active for longer, and
+their rotation periods can therefore be measured at older ages.
+
 Unfortunately, we still cannot rule out the possibility that mass-dependent
 heating is acting on these stars which could be responsible for some, if not
 all, of the increased velocity dispersion at cooler effective temperatures.
