--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -2,7 +2,7 @@
 \section{Introduction}
 
 \subsection{Gyrochronology}
-It has long been known that the rotation periods of FGKM dwarfs increase over
+It is well established that the rotation periods of FGKM dwarfs increase over
 time \citep{skumanich1972}.
 This characteristic of main-sequence stars allows them to be dated via their
 rotation periods in a practice known as gyrochronology, which is useful
